infrastructure/k8s/apps/lofibooks/overlays/preprod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lofibooks-preprod
  labels:
    app.kubernetes.io/part-of: lofibooks
    environment: preprod
